wip: remove OutMessage and finished YandePlugin